adding prescript code