@@ -324,6 +324,8 @@
                     <mainClass>${mainClass}</mainClass>
                     <options>
                         <option>--enable-native-access=javafx.graphics</option>
+                        <option>--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED</option>
+                        <option>--add-opens=java.base/java.nio=ALL-UNNAMED</option>
                     </options>
                 </configuration>
             </plugin>
